Bug fixes
Fixed snake overlap bug
Fixed growth rendering bug
Fixed speed change bug
Added timer stops as safety measures in ciritcal points where illegal
positions might be passed.

--- a/SnakeProj1/js/board-manager/board-manager.css
+++ b/SnakeProj1/js/board-manager/board-manager.css
@@ -4,7 +4,7 @@
 }
 
 .default-class{
-    background-color: black;
+    background-color: white;
     position: relative;
 }
 
